# SOO_platform_MISIS

./: .gitignore  docker-compose.yml
backend/: DockerfileWeb  dockerfile  environment.yml  pyproject.toml  requirements.txt
backend/app/: web_entry_point.py
backend/app/auth/: bearer.py  handler.py  models.py  state.py
backend/app/db/: manager.py  models.py
backend/app/modules/: annealing.py
backend/app/modules/annealing/: annealing.py  data.json  parse.py
backend/app/schemas/: models.py
backend/app/shared/: settings.py
backend/app/web/router/: router.py
backend/extra/: data.sql  init.sql  models.drawio
backend/trash/: api.py
frontend/: .prettierrc  Dockerfile  default.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.scss  App.tsx
frontend/src/app/api/: api.ts
frontend/src/app/store/: store.ts
frontend/src/entities/: index.ts
frontend/src/entities/ContactOperative/: ContactOperative.scss  ContactOperative.tsx  index.ts
frontend/src/entities/NotesItem/: NotesItem.scss  NotesItem.tsx  index.ts
frontend/src/entities/TableDuty/: TableDuty.scss  TableDuty.tsx  index.ts
frontend/src/features/: index.ts
frontend/src/features/CalendarWeekend/: CalendarWeekend.scss  CalendarWeekend.tsx  index.ts
frontend/src/features/ModalAddPerson/: ModalAddPerson.scss  ModalAddPerson.tsx  index.ts
frontend/src/features/ModalCreateNotes/: ModalCreateNotes.scss  ModalCreateNotes.tsx  index.ts
frontend/src/pages/: index.ts
frontend/src/shared/: index.ts
frontend/src/widgets/: index.ts
(+52 files in other folders)
